<resources>
    <string name="app_name">漫途社区</string>
    <string name="company_name">漫途社区</string>
    <string name="radio_main1">首页</string>
    <string name="radio_main2">物业通知</string>
    <string name="radio_main3">信息反馈</string>
    <string name="radio_main4">快递代收</string>
    <string name="radio_main5">更多</string>
    <string name="property_phone">010-84939234</string>
    <string name="register_title">尊敬的用户：\n
		为保证小区业主权益，更好的为业主服务,注册用户名需要实名认证.\n</string>
    <string name="register_menpaihao">格式为：区+楼号+门牌号，\n
                         例如：A区9号楼805，输入A9805</string>
    <string name="menu_index1_txt">关于</string>
    <string name="menu_index2_txt">系统设置</string>
    <string name="menu_index3_txt">意见反馈</string>
    <string name="menu_index4_txt">帮助</string>
    <string name="menu_index5_txt">退出</string>
    <string name="menu_index6_txt">商场地图</string>
    <string name="error_please_input_collection">请输入业务代收内容</string>
    <string name="txt_tips">提示</string>
    <string name="txt_tips_login_error">登陆失败，是否找回密码？</string>
    <string name="txt_back">返回</string>
    <string name="txt_ok">确定</string>
    <string name="txt_confirm">确认</string>
    <string name="txt_cancel">取消</string>
    <string name="button_complete">完成</string>
    <string name="button_edit">编辑</string>
    <string name="txt_loading">正在加载... 请稍候</string>
    <string name="update_available_title">发现新版本</string>
    <string name="update_available_info">是否立即更新？</string>
    <string name="update_available_buttonLeft">立即更新</string>
    <string name="update_available_buttonRight">下次再说</string>
    <string name="update_inavailable_title">未检测到新版本</string>
    <string name="update_inavailable_info">您当前安装的是最新版本</string>
    <string name="update_error_title">更新错误</string>
    <string name="update_error_info">版本检测出现异常，请稍后再试</string>
    <string name="update_error_info2">更新失败，请稍后再试</string>
    <string name="update_wait_title">正在更新，请稍等......</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_info_exit">确认退出了吗？</string>
    <string name="radio_logs">动态大厅</string>
    <string name="radio_users">用户大厅</string>
    <string name="radio_apps">游戏应用</string>
    <string name="user_info_title">用户详情</string>
    <string name="app_info_title">应用详情</string>
    <string name="app_info_down">免费下载</string>
    <string name="time_min">分钟前</string>
    <string name="time_hour">小时前</string>
    <string name="time_day">天前</string>
    <string name="time_now">0分钟前</string>
    <string name="button_login">登 录</string>
    <string name="word_login">用户登录</string>
    <string name="button_reg">注 册</string>
    <string name="word_reg">用户注册</string>
    <string name="phone_reg">手机注册</string>
    <string name="register_now">立即注册</string>
    <string name="register_by_phone">手机号注册</string>
    <string name="free_register">免费注册</string>
    <string name="free_tourist">游客</string>
    <string name="forget_password">忘记密码</string>
    <string name="button_login_by_phone">手机号登录</string>
    <string name="button_login_normal">普通登录</string>
    <string name="button_register_phone">手机号注册</string>
    <string name="button_register_normal">普通注册</string>
    <string name="word_name">用户名:</string>
    <string name="word_name_hint">请输入账号</string>
    <string name="word_input_password_hint">请输入密码</string>
    <string name="email_address">Email地址:</string>
    <string name="phone_number">手机号:</string>
    <string name="checked_number">校验码:</string>
    <string name="checked_image">验证码:</string>
    <string name="get_checked_number">获取校验码</string>
    <string name="change_next_image">换一张</string>
    <string name="level">等级：</string>
    <string name="point">积分：</string>
    <string name="send">发送</string>
    <string name="share">分享</string>
    <string name="find_password_prompt"></string>
    <string name="input_username_hint">请输入您在注册时输入的用户名</string>
    <string name="input_register_username_hint">4-20位字符，可由中英文、数字、_和-组成</string>
    <string name="input_phonenumber_hint">请输入您的手机号</string>
    <string name="agreement_prompt">已阅读或同意《巴黎商场用户协议》</string>
    <string name="agreement_title">巴黎商场用户协议</string>
    <string name="invitation_code_title">输入邀请码</string>
    <string name="error_please_input_invitation_code">请输入邀请码</string>
    <string name="error_please_input_username">请输入用户名</string>
    <string name="error_please_input_password">请输入密码</string>
    <string name="error_please_input_phonenumber">请输入手机号码</string>
    <string name="error_please_input_checkednumber">请输入校验码</string>
    <string name="error_username_not_exist">没有这个用户名</string>
    <string name="error_password_incorrect">密码输入错误</string>
    <string name="kuba_product_link">http://www.coo8.com/product/%s.html</string>
    <string name="main_share_text">巴黎商场推出的巴黎商场免费客户端很不错，可以随时获得最新商品折扣信息，下载地址为：http://221.0.78.196:8080/xmldataview/setup/wimall4android.apk </string>
    <string name="share_content">巴黎商场卖的%s很不错，分享一下。---通过巴黎商场手机客户端发送。</string>
    <string name="error_username_cannot_be_empty">用户名不能为空</string>
    <string name="error_password_cannot_be_empty">密码不能为空</string>
    <string name="error_username_length">用户名应为4-16位</string>
    <string name="error_email_cannot_be_empty">邮箱不能为空</string>
    <string name="error_input_legal_email">请输入正确的邮箱地址</string>
    <string name="error_not_accept_agreement">未接受协议</string>
    <string name="error_two_password_not_same">您两次输入的密码不一致</string>
    <string name="error_username_already_exist">用户名已存在</string>
    <string name="error_couponid_cannot_be_empty">优惠券编号不能为空</string>
    <string name="error_userphonenumber_cannot_be_empty">手机号不能为空</string>
    <string name="error_phonenumber_different">手机号与获取验证码的手机号不一致</string>
    <string name="error_userphonenumber">手机号码不合法,应为11位数字</string>
    <string name="error_checkednumber_cannot_be_empty">校验码不能为空</string>
    <string name="error_checkedimg_cannot_be_empty">验证码不能为空</string>
    <string name="error_checkedimg_different">验证码不正确</string>
    <string name="msg_getCheckedNumber_ok">校验码短信已发送,请查收</string>
    <string name="current_password">原密码:</string>
    <string name="new_password">输入新密码:</string>
    <string name="new_password2">确认新密码:</string>
    <string name="modify_password">修改密码</string>
    <string name="find_password">找回密码</string>
    <string name="word_password">密码:</string>
    <string name="word_verf_password">确认密码:</string>
    <string name="word_password_hint">密码</string>
    <string name="word_password_hint2">密码应为6-16位</string>
    <string name="word_newreg">新用户注册</string>
    <string name="warn_name">您忘记输入账号了哦~</string>
    <string name="warn_password">您忘记输入密码了哦~</string>
    <string name="warn_wrong">您输入的账号和密码不匹配。</string>
    <string name="warn_pass_match">两次输入的密码不一样哦~</string>
    <string name="warn_bad_format">密码必须是6-16位的数字、字母组合哦~</string>
    <string name="warn_bad_name">账户格式不正确，要使用邮箱哦~</string>
    <string name="warn_mail">您输入的邮箱地址已经被使用了，换一个吧~</string>
    <string name="please_choose_email">请选择电子邮件客户端</string>
    <string name="save">保存</string>
    <string name="feedback">反馈</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="account_center">账户中心</string>
    <string name="coupon">优惠券</string>
    <string name="account_info">账户信息</string>
    <string name="favorite">收藏夹</string>
    <string name="my_order">我的订单</string>
    <string name="my_position">我的位置</string>
    <string name="invoice_info">发票信息</string>
    <string name="invoice_mg">发票管理</string>
    <string name="address_mg">地址管理</string>
    <string name="point_rule">积分兑换规则</string>
    <string name="address_detail">地址详情</string>
    <string name="status">状态：</string>
    <string name="total_price">总价：</string>
    <string name="order_state">状态：</string>
    <string name="recipient">收件人：</string>
    <string name="phone">联系电话：</string>
    <string name="address">地址：</string>
    <string name="zipcode">邮编：</string>
    <string name="ship_type">送货方式：</string>
    <string name="pay_type">支付方式：</string>
    <string name="ship_time">送货时间：</string>
    <string name="order_notes">备注：</string>
    <string name="product_list">商品清单</string>
    <string name="product_code">商品编码：</string>
    <string name="product_name">商品名称：</string>
    <string name="product_unit">单位：</string>
    <string name="size">尺码：</string>
    <string name="count">数量：</string>
    <string name="price">单价：</string>
    <string name="total_count">数量总计：</string>
    <string name="product_total_price">商品金额总计：</string>
    <string name="trans_price">运费：</string>
    <string name="discount_price">优惠金额：</string>
    <string name="result_price">您共需为订单支付：</string>
    <string name="address_name_null">您还没有填写收件人姓名呢~</string>
    <string name="address_phone_null">请先填写手机号码或固定电话吧~</string>
    <string name="address_area_null">您忘记选择配送区域了哦</string>
    <string name="address_zipcode_null">您忘记输入邮编了哦</string>
    <string name="address_address_null">请输入收货地址哦</string>
    <string name="address_zippost_error">邮编格式不正确哦，记得是6位数字</string>
    <string name="address_phone_error">您输入的固定电话号码不正确哦~</string>
    <string name="address_mobile_error">您输入的手机号码不正确哦~</string>
    <string name="address_success">增加收货地址成功</string>
    <string name="address_error">请填写收货地址哦~</string>
    <string name="address_update_error">修改收货地址为空</string>
    <string name="address_update_success">修改收货地址成功</string>
    <string name="address_area_error">配送区域不能为空哦~</string>
    <string name="coupon_introduction">您通过邮件或者短信获取的优惠券才需要激活，激活后不能取消，激活优惠券将验证并绑定该优惠券到您的个人账户，激活成功后即可在系统中显示和使用。</string>
    <string name="register2_edithint2">请输入设置密码</string>
    <string name="register2_edithint3">请再次确认密码</string>
    <string name="register2_reg">确定</string>
    <string name="update_title">软件更新提示</string>
    <string name="update_cancle">下次再说</string>
    <string name="update_confirm">立即更新</string>
</resources>