<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/update_dialog_bg"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/update_title"
        android:textColor="@color/update_color_titl_bg"
        android:textSize="@dimen/update_title_size" />

    <TextView
        android:id="@+id/update_find_new_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update_title"
        android:textColor="@color/update_color_info"
        android:textSize="@dimen/update_version_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/update_find_new_version_info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="left"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:scrollbars="vertical"
        android:maxLines="100"
        android:text="@string/update_title"
        android:textColor="@color/update_color_info"
        android:textSize="@dimen/update_info_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/update_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_cancle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/update_color_info"
            android:layout_marginBottom="10dp"
            android:background="@drawable/update_cancle_bg"
            android:textSize="@dimen/update_btn_size" />

        <Button
            android:id="@+id/update_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_confirm"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@drawable/update_confirm_bg"
            android:textSize="@dimen/update_btn_size" />
    </LinearLayout>

</LinearLayout>