<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/beijing"
    android:orientation="vertical" >

    <include layout="@layout/include_main_topbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="8dip"
        android:background="@drawable/item_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/more_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="fill_parent"
                android:gravity="right|center"
                android:text="@string/current_password"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:background="#00000000"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/more_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="fill_parent"
                android:gravity="right|center"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:background="#00000000"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/more_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="fill_parent"
                android:gravity="right|center"
                android:text="@string/new_password2"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />

            <EditText
                android:id="@+id/newPassword2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:background="#00000000"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/more_item_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_login"
            android:onClick="commit"
            android:text="提交"
            android:textColor="@color/blue_btn_txt_normal"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</LinearLayout>