<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:weightSum="1280"
	android:background="@color/background_color"
	android:orientation="vertical" >
	<!-- 标题栏 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="130"
		>
		<include
			android:id="@+id/IncludeMainTopBarInclude"
			layout="@layout/include_main_topbar" />

	</LinearLayout>
	<!-- 留白 -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="20"
		/>

	<!--   手机号 -->

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="88"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:background="@color/white"
		android:orientation="horizontal"
		>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:gravity="center|left"
				android:text="手机号"
				android:padding="10dp"
				android:textColor="#323232"
				android:textSize="@dimen/input_text_size"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="4"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			>
			<EditText
				android:id="@+id/Register2_edit1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/white"
				android:ems="30"
				android:gravity="center_vertical"
				android:hint="请设置登录用户名"
				android:paddingLeft="0dp"
				android:singleLine="true"
				android:textColor="#545454"
				android:textSize="@dimen/input_text_size" />


		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/white"
		>
		<View
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/list_line"
			android:layout_marginLeft="10dp"
			/>
	</LinearLayout>
	<!-- 获取验证码-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="88"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:gravity="center_horizontal"
		android:orientation="horizontal"
		android:background="@color/white"
		>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent">
			<TextView
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:gravity="center|left"
				android:text="验证码"
				android:background="@drawable/bg_editext"
				android:paddingLeft="10dp"
				android:textColor="#323232"
				android:textSize="@dimen/input_text_size"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="3"
			android:layout_height="match_parent"
			>
			<EditText
				android:id="@+id/Register2_editCode"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:background="@color/white"
				android:ems="30"
				android:gravity="center|left"
				android:hint="请输入验证码"
				android:paddingLeft="10dp"
				android:singleLine="true"
				android:textColor="#545454"
				android:textSize="@dimen/input_text_size"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="2"
			android:layout_height="match_parent">
			<Button
				android:id="@+id/Register2_Button_GetPhoneCode"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/blue_btn_normal"
				android:text="获取验证码"
				android:layout_margin="5dp"
				android:textColor="#323232"
				android:textSize="16sp" />
		</LinearLayout>

	</LinearLayout>
	<!-- 提示文字-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="60"
		android:gravity="center_vertical"
		>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="请输入6-20位由字母、数字或符号组成的密码"
			android:paddingLeft="10dp"
			/>

	</LinearLayout>
	<!-- 新密码-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="88"
		>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:gravity="center" >

			<EditText
				android:id="@+id/newPassword"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:background="@color/white"
				android:ems="30"
				android:gravity="center|left"
				android:hint="@string/register2_edithint2"
				android:paddingLeft="10dp"
				android:password="true"
				android:singleLine="true"
				android:textColor="#545454"
				android:textSize="@dimen/input_text_size" />

		</RelativeLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="20"
		/>


	<!-- 再次确认密码-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="88"
		>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="45dp">

			<EditText
				android:id="@+id/newPassword2"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:layout_alignParentBottom="true"
				android:layout_alignParentTop="true"
				android:background="@color/white"
				android:ems="30"
				android:gravity="center|left"
				android:hint="@string/register2_edithint3"
				android:paddingLeft="10dp"
				android:password="true"
				android:singleLine="true"
				android:textColor="#545454"
				android:textSize="@dimen/input_text_size" />

		</RelativeLayout>

	</LinearLayout>
	<!-- 汉字提示部分-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="62"
		android:gravity="center_vertical"
		>
		<TextView
			android:id="@+id/Register2_txt1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="密码为"
			android:textColor="#666666"
			android:textSize="12.0dip"
			android:visibility="gone"/>

		<TextView
			android:id="@+id/Register2_txt2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="密码为"
			android:textColor="#005870"
			android:textSize="12.0dip"
			android:visibility="gone"
			/>

		<TextView
			android:id="@+id/Register2_txt3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="密码为"
			android:textColor="#d83400"
			android:textSize="12.0dip"
			android:visibility="gone"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="80"
		android:orientation="horizontal"
		>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="34"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="654"
			android:layout_height="match_parent">
			<Button
				android:id="@+id/Register2_btn"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/btn_bg"
				android:text="@string/register2_reg"
				android:textColor="@color/white"
				android:textSize="@dimen/button_text_size" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="34"
			android:layout_height="match_parent"/>

	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="500"
		></LinearLayout>



	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="40"
		android:layout_gravity="center_horizontal"
		android:gravity="bottom"
		>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="bottom"

			>
			<TextView
				android:layout_alignParentBottom="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:text="@string/company_name"
				android:textColor="#555555"
				android:textSize="12sp" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>